# alg_e_str_dati_elaborato

./: .gitignore  CMakeLists.txt  compile_flags.txt  generate_csvs.sh  readme.md
.github/workflows/: build.yml
doc/: documentation.tex
results/: average_results.csv  countingsort.csv  countingsort.input_range.csv  countingsort_mem_opt.csv  insertion_sort.csv  introsort.array_length.csv  introsort.csv  quicksort.array_length.csv  quicksort.csv  quicksort3way.csv  single_test_results.csv  slowsort.csv
results/filippo_Linux_x86_64/: countingsort.array_length.csv  countingsort.input_range.csv  introsort.array_length.csv  introsort.input_range.csv  quicksort.array_length.csv  quicksort.input_range.csv  quicksort3way.array_length.csv  quicksort3way.input_range.csv
results/runner_Linux_x86_64/: countingsort.array_length.csv  countingsort.input_range.csv  introsort.array_length.csv  introsort.input_range.csv  quicksort.array_length.csv  quicksort.input_range.csv  quicksort3way.array_length.csv  quicksort3way.input_range.csv
results/vicix_Darwin_arm64/: countingsort.array_length.csv  countingsort.input_range.csv  introsort.array_length.csv  introsort.input_range.csv  quicksort.array_length.csv  quicksort.input_range.csv  quicksort3way.array_length.csv  quicksort3way.input_range.csv
src/exercises/: 12_periodo_frazionario.c  18_verifica_di_alberi_binari_di_ricerca.c  22_avl_tree.c  avl
src/runner/: insertion_sort.c  main.c  quicksort.c  quicksort3way.c
src/runner/algorithm_runner/: algorithm_runner.c  algorithm_runner.h
src/runner/countingsort/: main.c
src/runner/insertion_sort/: main.c
src/runner/introsort/: main.c
src/runner/quicksort/: main.c
src/runner/quicksort3way/: main.c
src/runner/slowsort/: main.c
src/visualizer/: genera_grafico.py
(+3 files in other folders)
